[project]
name = "astro-web"
version = "0.1.0"
description = "Dynamic website and API to explore astronomical database of brown dwarfs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astrodbkit>=2.5",
    "starlette<0.46.0",
    "fastapi>=0.120.0",
    "bokeh==3.8.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "specutils>=2.2",
    "psycopg[binary]>=3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.0",
    "httpx>=0.28.1",
    "pytest-cov>=7.1.0",
]

[project.scripts]
serve = "astro_web.main:serve"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["astro_web*"]

# coverage configuration
[tool.coverage.run]
data_file = ".coverage"
source = [
    "astro_web"
]
omit = [
    "templates/", 
]

[tool.coverage.report]
omit = ["__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "if r.status_code != 200:",
    "except Exception as e:",
]
